# stuart-data-cleaner

./: .cursor.code-workspace  .gitignore  .project_root  DEVELOPMENT_GUIDELINES.md  ORGANIZATION_SUMMARY.md  README.md  SESSION_INITIALIZATION_README.md  Stuart.code-workspace  TEST_PROTECTION.md  check_archon_status.py  commit_changes.py  fix_imports.py  main.py  pyproject.toml  requirements.txt  test_archon_mcp.py  test_config.json  test_mcp_connection.py  workspace_config.json  workspace_manager.ps1
Broadly Report/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LLM_SETUP_GUIDE.md  README_ENHANCED_SYSTEM.md  README_Ollama_Integration.md  README_broadly_data_cleaner.md  alert_contact_export.py  alert_contact_export_with_llm.py  broadly_data_cleaner.py  broadly_data_cleaner_with_llm.py  broadly_survey_enhanced.py  config.json  contact_export_enhanced.py  requirements.txt
config/: __init__.py  config.py
core/: __init__.py  data_processor.py  header_detector.py  llm_engine.py  name_parser.py  uncertainty_detector.py
dev/: SESSION_SUMMARY_20250821.md  archon_project.json  archon_tasks.py  dev_setup.ps1  setup_archon_project.py
docs/: cursor_current_status_of_the_data_clean_20250826.md  cursor_project_status_and_tasks_for_data_cleaner_22082025.md  data_cleanup_and_processing_instructions_for_xlsx.md  session_planning_2025-01-08.md  session_planning_part2_2025-01-08.md
project_docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_ROADMAP.md  GIT_WORKFLOW.md  PRD.md  README.md  TASK_STATUS.md  TECHNICAL_ARCHITECTURE.md  TESTING_STRATEGY.md  (+3 more)
(+67 files in other folders)
