[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stuart-data-cleaner"
version = "1.0.0"
description = "Data cleaning and processing workflows for Stuart project"
authors = [{name = "Stuart Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "xlsxwriter>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "workflows*", "processors*", "cli*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
